@@ -19,6 +19,8 @@ package xyz.zedler.patrick.grocy.web;
     Copyright 2020-2021 by Patrick Zedler & Dominic Zedler
 */
 
+import android.util.Base64;
+
 import androidx.annotation.Nullable;
 
 import com.android.volley.DefaultRetryPolicy;
@@ -36,10 +38,13 @@ import java.io.UnsupportedEncodingException;
 import java.util.Collections;
 import java.util.HashMap;
 import java.util.Map;
+import java.util.regex.Matcher;
+import java.util.regex.Pattern;
 
 public class CustomJsonObjectRequest extends JsonObjectRequest {
 
     private final Runnable onRequestFinished;
+    private final String url;
     private final String apiKey;
     private final String homeAssistantIngressSessionKey;
     private final String hassLongLivedAccessToken;
@@ -64,6 +69,7 @@ public class CustomJsonObjectRequest extends JsonObjectRequest {
             if(errorListener != null) errorListener.onErrorResponse(error);
         });
         this.onRequestFinished = onRequestFinished;
+        this.url = url;
         this.apiKey = apiKey;
         this.homeAssistantIngressSessionKey = homeAssistantIngressSessionKey;
         this.hassLongLivedAccessToken = null;
@@ -95,6 +101,7 @@ public class CustomJsonObjectRequest extends JsonObjectRequest {
             if(errorListener != null) errorListener.onErrorResponse(error);
         });
         this.onRequestFinished = onRequestFinished;
+        this.url = url;
         this.apiKey = null;
         this.homeAssistantIngressSessionKey = null;
         this.hassLongLivedAccessToken = hassLongLivedAccessToken;
@@ -137,6 +144,15 @@ public class CustomJsonObjectRequest extends JsonObjectRequest {
         if(apiKey != null && !apiKey.isEmpty()) params.put("GROCY-API-KEY", apiKey);
         if(hassLongLivedAccessToken != null && !hassLongLivedAccessToken.isEmpty()) {
             params.put("Authorization", "Bearer " + hassLongLivedAccessToken);
+        } else {
+            Matcher matcher = Pattern.compile("(http|https)://(\\S+):(\\S+)@(\\S+)").matcher(url);
+            if(matcher.matches()) {
+                String user = matcher.group(2);
+                String password = matcher.group(3);
+                byte[] combination = (user + ":" + password).getBytes();
+                String encoded = Base64.encodeToString(combination, Base64.DEFAULT);
+                params.put( "Authorization", "Basic " + encoded);
+            }
         }
         if(homeAssistantIngressSessionKey != null) {
             params.put("Cookie", "ingress_session=" + homeAssistantIngressSessionKey);
